--- a/src/main/resources/templates/posting/read.html
+++ b/src/main/resources/templates/posting/read.html
@@ -102,7 +102,8 @@
     <div class="row mt-3">
         <div class="col-md-12">
             <div class="my-4 ">
-                <button class="btn btn-info addReplyBtn">댓글추가</button>
+                <textarea class="form-control replyText" placeholder="댓글을 입력하세요..."></textarea>
+                <button type="button" class="btn btn-primary registerBtn">등록</button></button>
                 <!--                sec:authorize="isAuthenticated()" 시큐리티 쓸때 버튼 뒤에 붙히면 됨-->
             </div>
             <ul class="list-group replyList">
@@ -273,13 +274,16 @@
 
         printReplies();
 
-        const registerModal = new bootstrap.Modal(document.querySelector(".registerModal"));
-        const registerBtn = document.querySelector(".registerBtn");
-        const replyText = document.querySelector(".replyText");
-        const replyer = document.querySelector(".replyer");
-        const closeRegisterBtn = document.querySelector(".closeRegisterBtn");
+        // const registerModal = new bootstrap.Modal(document.querySelector(".registerModal"));
+        // const registerBtn = document.querySelector(".registerBtn");
+        // const replyText = document.querySelector(".replyText");
+        // const replyer = document.querySelector(".replyer");
+        // const closeRegisterBtn = document.querySelector(".closeRegisterBtn");
 
+        const replyText = document.querySelector(".replyText"); // 새 텍스트 영역
+        const registerBtn = document.querySelector(".registerBtn"); // 새 등록 버튼
         let parentId = '';
+
 
         const modifyModal = new bootstrap.Modal(document.querySelector(".modifyModal"));
         const modifyBtn = document.querySelector(".updateBtn");
