--- a/src/main/resources/templates/posting/list.html
+++ b/src/main/resources/templates/posting/list.html
@@ -54,6 +54,7 @@
                 <p th:text="'작성자: ' + ${post.author}"></p>
                 <p th:text="'모집 상태: ' + ${post.status}"></p>
                 <p th:text="'모집 인원: ' + ${post.requiredParticipants} + '명'"></p>
+                <span class="py-5">[[${dto.replyCount}]]</span>
                 <!-- 작성자 본인 글 표시 -->
                 <div th:if="${isAuthor[iterStat.index]}" class="badge text-white position-absolute bottom-0 start-50 translate-middle-x mb-3"
                      style="background-color: #6c757d; padding: 0.5rem 1rem; border-radius: 15px;">
