--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" lang="en">
   <title>로그인 페이지</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -56,6 +56,12 @@
     <div class="form-group mb-4">
       <label for="password" class="form-label">비밀번호:</label>
       <input type="password" class="form-control" id="password" placeholder="비밀번호 입력" name="password" required>
+    </div>
+    <div class="container" style="display: flex; justify-content: center; align-content: center; align-items: center; flex-direction: column; margin: 200px auto; ">
+      <h1>카카오 로그인</h1>
+      <a th:href="${location}">
+        <img src="/kakao_login_medium_narrow.png" >
+      </a>
     </div>
     <button type="submit" class="btn btn-primary w-100 mb-2">로그인</button>
     <button type="button" class="btn btn-outline-secondary w-100" onclick="location.href='/user/join'">회원가입</button>
